# HeraMind

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  README.vi.md  README.zh.md  config.minimal.toml  docker-compose.yml
.cargo/: config.toml
.github/: SIGNING.md
.github/scripts/: export-certificate.sh  sign-apple-id.sh
.github/workflows/: build.yml  release-notify.yml
crates/heramind-agent/: Cargo.toml
crates/heramind-agent/benches/: agent_bench.rs
crates/heramind-agent/examples/: verify_language_policy.rs
crates/heramind-agent/src/: error.rs  image_utils.rs  lib.rs  llm.rs  session.rs
crates/heramind-agent/tests/: cancellation_test.rs  comprehensive_agent_eval.rs  conversation_integration.rs  full_integration_test.rs  language_adaptation_test.rs  llm_error_surfacing.rs  llm_integration_test.rs  load_test.rs  multimodal_message_test.rs  real_world_simulation_test.rs  realistic_performance_test.rs  web_fetch_file_tools_test.rs
crates/heramind-api/: Cargo.toml
crates/heramind-api/src/: auth.rs  auth_users.rs  capability_providers.rs  config.rs  crypto.rs  event_services.rs  lib.rs  startup.rs  validator.rs
crates/heramind-api/src/automation/: device_type_generator.rs  error.rs  mod.rs  output_registry.rs  transform.rs  types.rs
crates/heramind-api/src/automation/discovery/: auto_onboard.rs  path_extractor.rs  semantic_inference.rs  virtual_metric.rs
crates/heramind-api/src/handlers/: agents.rs  automations.rs  capabilities.rs  common.rs  config.rs  dashboards.rs  data.rs  data_push.rs  events.rs  extension_stream.rs  extensions.rs  frontend_components.rs  instances.rs  llm_backends.rs  memory.rs  message_channels.rs  messages.rs  onboarding.rs  rules.rs  sessions.rs  settings.rs  skills.rs  stats.rs  suggestions.rs  summarization.rs
crates/heramind-api/src/handlers/devices/: auto_onboard.rs  ble_provision.rs  compat.rs  crud.rs  mdl.rs  metrics.rs  telemetry.rs  types.rs  webhook.rs
crates/heramind-api/src/handlers/mqtt/: broker_config.rs  brokers.rs  cert_gen.rs  models.rs  status.rs  subscriptions.rs
crates/heramind-api/src/handlers/ws/: mod.rs
crates/heramind-api/src/models/: error.rs  mod.rs
crates/heramind-api/src/server/: assets.rs  extension_metrics.rs  install_service.rs  mod.rs  router.rs  system_context.rs  tools.rs  types.rs  uninstall_service.rs
crates/heramind-api/src/server/state/: agent_state.rs  automation_state.rs  core_state.rs  device_state.rs  extension_state.rs
crates/heramind-api/tests/: integration.rs  session_fix_test.rs
crates/heramind-api/tests/common/: mod.rs
crates/heramind-api/tests/handlers/: auth_users.rs  basic.rs  devices.rs  extensions.rs  mod.rs  rules.rs  sessions.rs  timestamp_consistency_test.rs
crates/heramind-cli/: Cargo.toml
crates/heramind-cli-ops/: Cargo.toml
crates/heramind-cli-ops/src/: agent_cmd.rs  api_client.rs  auth_cmd.rs  auto_auth.rs  connector.rs  dashboard.rs  data_push.rs  device.rs  dispatch.rs  extension.rs  llm.rs  message.rs  output.rs  rule.rs  system.rs  transform.rs  types.rs  widget.rs
crates/heramind-cli-ops/tests/: skill_cli_drift.rs
crates/heramind-cli/src/: main.rs
crates/heramind-cli/test-extension/: Cargo.toml  manifest.json
crates/heramind-cli/test-extension/src/: lib.rs
crates/heramind-cli/tests/: cli_main.rs
crates/heramind-cli/tests/commands/: agent_test.rs  chat_test.rs  dashboard_test.rs  device_test.rs  list_models_test.rs  message_test.rs  plugin_test.rs  prompt_test.rs  rule_test.rs  serve_test.rs  transform_test.rs  widget_test.rs
crates/heramind-core/: Cargo.toml
crates/heramind-core/src/: brand.rs  event.rs  eventbus.rs  lib.rs
crates/heramind-core/tests/: README.md  capability_e2e_test.rs  capability_integration_test.rs  capability_providers_test.rs  concurrent_limiting.rs  config_validation_test.rs  error_path_test.rs  event_dispatcher_test.rs  eventbus_test.rs  extension_capability_test.rs  extension_command_test.rs  extension_context_test.rs  extension_e2e_test.rs  extension_event_subscription_test.rs  extension_event_test.rs  extension_lifecycle_test.rs  extension_loader_test.rs  extension_package_test.rs  extension_proxy_test.rs  extension_registry_test.rs  extension_stream_test.rs  extension_test.rs  ipc_e2e_test.rs  ipc_isolated_test.rs  isolated_manager_test.rs  isolated_process_test.rs  message_test.rs  test_event_bus.rs
crates/heramind-core/tests/fixtures/smoke-extension/: Cargo.toml
crates/heramind-core/tests/fixtures/smoke-extension/src/: lib.rs
crates/heramind-data-push/: Cargo.toml
crates/heramind-data-push/src/: lib.rs  manager.rs  scheduler.rs
crates/heramind-data-push/src/targets/: mqtt.rs
crates/heramind-devices/: Cargo.toml
crates/heramind-devices/src/: adapter.rs  lib.rs  mdl.rs  (+6 more)
crates/heramind-extension-runner/: Cargo.toml
crates/heramind-extension-runner/src/: ipc_routing.rs  main.rs
crates/heramind-extension-runner/tests/: README.md  runner_ipc_test.rs
crates/heramind-extension-sdk/: Cargo.toml  README.md
crates/heramind-messages/: Cargo.toml
crates/heramind-rules/: Cargo.toml
crates/heramind-rules/src/: device_integration.rs  device_status_emitter.rs  engine.rs  lib.rs  models.rs  preview.rs  unified_provider.rs  validator.rs
crates/heramind-rules/tests/: offline_rule_integration_test.rs  rules_integration_test.rs
crates/heramind-storage/: Cargo.toml
deploy/: README.md  nginx.conf.example
eval/: README.md  run_eval.py
eval/lib/: judge.py  report.py  seed.py  server.py  state_query.py
eval/smoke/: bad-001.json  bad-002.json  good-002.json
scripts/: agent_test.py  capture-extra.py  capture-screenshots.py  check_skill_cli_drift.py  heramind.service  install.sh  setup-tauri-key.sh  tool_verification.py
web/: DESIGN_SPEC.md  index.html  package.json  playwright.config.ts  tailwind.config.js
web/.devcontainer/: devcontainer.json
web/e2e/: fixtures.ts
web/public/: site.webmanifest
web/scripts/: build-dmg.sh  install.command
web/src/: App.tsx  index.css  main.tsx
web/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
(+428 files in other folders)
